<resources>
    <string name="app_name">DjangoRoid</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">로그인</string>
    <string name="up_button">업버튼</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="singup">회원가입</string>
    <string name="question_tag">사용 목적을 선택해주세요. (복수 선택 가능)</string>
    <string name="studying">공부</string>
    <string name="playing">여가</string>
    <string name="drawing">그림</string>
    <string name="etc">그 외</string>
    <string name="nickname">닉네임</string>
    <string name="title">제목</string>
    <string name="undo">Undo</string>
    <string name="save">Save</string>
    <string name="color">Color</string>
    <string name="stroke">Stroke</string>
    <string name="upload">Upload</string>
</resources>